--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "goit-js-hw-11-color-switch",
+  "name": "goit-js-hw-12-countries",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://izachok.github.io/goit-js-hw-11-timer",
+  "homepage": "https://izachok.github.io/goit-js-hw-12-countries",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11-timer/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-12-countries/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/izachok/goit-js-hw-11-timer.git"
+    "url": "git+https://github.com/izachok/goit-js-hw-12-countries.git"
   },
   "keywords": [],
   "author": "Olga Tiutiunnyk <izachok@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/izachok/goit-js-hw-11-timer/issues"
+    "url": "https://github.com/izachok/goit-js-hw-12-countries/issues"
   },
   "devDependencies": {
     "@pnotify/core": "^5.2.0",
